@@ -1,3 +1,8 @@
+2000-11-04  Ryan Nunn <triforce@merlin.net.au>
+	* gumps.cc, audio/Audio.cc: Sound Effects button now works and state is saved.
+	* audio/Midi.*: sfx.dat is now called midisfx.flx. It must be in the data dir.
+	Fixed bug causing midi to never be played.
+
 2000-11-03  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* gamewin.cc: Look backwards for closest schedule change when
